# pythonqt

./: .clang-format  .gitignore  .pre-commit-config.yaml  Building.html  CHANGELOG.txt  CMakeLists.txt  Developer.html  Download.html  Examples.html  Features.html  License.html  PythonQt.bat  PythonQt.pri  PythonQt.pro  PythonQtBoolResult_8h.html  PythonQtBoolResult_8h_source.html  PythonQtClassInfo_8h.html  PythonQtClassInfo_8h_source.html  PythonQtClassWrapper_8h.html  PythonQtClassWrapper_8h_source.html  PythonQtConversion_8h.html  PythonQtConversion_8h_source.html  PythonQtCppWrapperFactory_8h.html  PythonQtCppWrapperFactory_8h_source.html  PythonQtDoc_8h.html  PythonQtDoc_8h_source.html  PythonQtImportFileInterface_8h.html  PythonQtImportFileInterface_8h_source.html  PythonQtImporter_8h.html  PythonQtImporter_8h_source.html  PythonQtInstanceWrapper_8h.html  PythonQtInstanceWrapper_8h_source.html  PythonQtMethodInfo_8h.html  PythonQtMethodInfo_8h_source.html  PythonQtMisc_8h.html  PythonQtMisc_8h_source.html  PythonQtObjectPtr_8h.html  PythonQtObjectPtr_8h_source.html  PythonQtProperty_8h.html  PythonQtProperty_8h_source.html  (+190 more)
extensions/PythonQt_QtAll/: CMakeLists.txt  PythonQt_QtAll.cpp  PythonQt_QtAll.h  PythonQt_QtAll.pro
generator/: CMakeLists.txt  LICENSE.LGPL  abstractmetabuilder.cpp  abstractmetabuilder.h  abstractmetalang.cpp  abstractmetalang.h  asttoxml.cpp  asttoxml.h  build_all.txt  build_all_qt6.txt  classgenerator.cpp  classgenerator.h  customtypes.cpp  customtypes.h  docgenerator.h  fileout.cpp  fileout.h  generator  generator.cpp  generator.h  generator.pri  generator.pro  generator.qrc  generatorset.cpp  generatorset.h  generatorsetqtscript.cpp  generatorsetqtscript.h  main.cpp  main.h  metajava.cpp  metajava.h  metaqtscript.cpp  metaqtscript.h  metaqtscriptbuilder.cpp  metaqtscriptbuilder.h  prigenerator.cpp  prigenerator.h  qrc_generator.cpp  qtscript_masterinclude.h  reporthandler.cpp  (+33 more)
generator/parser/: CMakeLists.txt  ast.cpp  ast.h  binder.cpp  binder.h  class_compiler.cpp  class_compiler.h  codemodel.cpp  codemodel.h  codemodel_finder.cpp  codemodel_finder.h  codemodel_fwd.h  codemodel_pointer.h  compiler_utils.cpp  compiler_utils.h  control.cpp  control.h  declarator_compiler.cpp  declarator_compiler.h  default_visitor.cpp  default_visitor.h  dumptree.cpp  dumptree.h  lexer.cpp  lexer.h  list.cpp  list.h  name_compiler.cpp  name_compiler.h  parser.cpp  parser.h  rxx_allocator.h  smallobject.cpp  smallobject.h  symbol.h  tokens.cpp  tokens.h  type_compiler.cpp  type_compiler.h  visitor.cpp  (+1 more)
generator/parser/include/: stdarg.h
generator/parser/rpp/: CMakeLists.txt  pp-engine-bits.h  pp-engine.h  pp-environment.h  pp-internal.h  pp-iterator.h  pp-macro-expander.h  pp-macro.h  pp-main.cpp  pp-qt-configuration  preprocessor.cpp  rpp.pri
generator/simplecpp/: README.txt  do_not_stop_on_error.patch  simplecpp.cpp  simplecpp.h  simplecpp.pri
src/: CMakeLists.txt  PythonQt.cpp  PythonQt.h  PythonQtBoolResult.cpp  PythonQtBoolResult.h  PythonQtClassInfo.cpp  PythonQtClassInfo.h  PythonQtClassWrapper.cpp  PythonQtClassWrapper.h  PythonQtConfigure.h.in  PythonQtConversion.cpp  PythonQtConversion.h  PythonQtCppWrapperFactory.h  PythonQtDoc.h  PythonQtImportFileInterface.h  PythonQtImporter.cpp  PythonQtImporter.h  PythonQtInstanceWrapper.cpp  PythonQtInstanceWrapper.h  PythonQtMetaObjectWrapper.cpp  PythonQtMetaObjectWrapper.h  PythonQtMethodInfo.cpp  PythonQtMethodInfo.h  PythonQtMisc.cpp  PythonQtMisc.h  PythonQtObjectPtr.cpp  PythonQtObjectPtr.h  PythonQtProperty.cpp  PythonQtProperty.h  PythonQtPythonInclude.h  PythonQtQFileImporter.cpp  PythonQtQFileImporter.h  PythonQtSignal.cpp  PythonQtSignal.h  PythonQtSignalReceiver.cpp  PythonQtSignalReceiver.h  PythonQtSlot.cpp  PythonQtSlot.h  PythonQtSlotDecorator.cpp  PythonQtSlotDecorator.h  (+19 more)
src/gui/: PythonQtScriptingConsole.cpp  PythonQtScriptingConsole.h
tests/: CMakeLists.txt  PythonQtTest.pro  PythonQtTestCleanup.cpp  PythonQtTestCleanup.h  PythonQtTestMain.cpp  PythonQtTests.cpp  PythonQtTests.h  tests.pro
trunk/: CHANGELOG.txt  CMakeLists.txt  README
trunk/doxygen/: doc.cfg  footer.html  header.html
trunk/examples/CPPPyWrapperExample/: CPPPyWrapperExample.cpp  QFileImportInterface.h
trunk/examples/PyCPPWrapperExample/: CustomObjects.cpp  main.cpp  (+2 more)
trunk/generator/: abstractmetabuilder.cpp  abstractmetabuilder.h  abstractmetalang.cpp  abstractmetalang.h  asttoxml.cpp  asttoxml.h  build_all.txt  classgenerator.cpp  classgenerator.h  customtypes.cpp  docgenerator.cpp  generator.cpp  generator.h  generator.pro  generatorsetqtscript.cpp  generatorsetqtscript.h  main.h  metajava.h  metaqtscript.h  metaqtscriptbuilder.h  prigenerator.cpp  qtscript_masterinclude.h  setupgenerator.cpp  setupgenerator.h  shellgenerator.cpp  shellgenerator.h  shellheadergenerator.cpp  shellheadergenerator.h  shellimplgenerator.cpp  typeparser.cpp  typeparser.h  typesystem.cpp  typesystem.h  typesystem_core-common.xml  typesystem_core.xml  typesystem_gui-common.xml  typesystem_gui-qtscript.xml  typesystem_gui.xml  typesystem_multimedia.xml  typesystem_network-common.xml  (+10 more)
trunk/src/: PythonQt.cpp  PythonQt.h  PythonQtClassInfo.cpp  PythonQtClassInfo.h  PythonQtClassWrapper.cpp  PythonQtClassWrapper.h  PythonQtConversion.cpp  PythonQtConversion.h  PythonQtCppWrapperFactory.h  PythonQtDoc.h  PythonQtImportFileInterface.h  PythonQtImporter.cpp  PythonQtImporter.h  PythonQtInstanceWrapper.cpp  PythonQtInstanceWrapper.h  PythonQtMethodInfo.cpp  PythonQtMethodInfo.h  PythonQtMisc.h  PythonQtObjectPtr.cpp  PythonQtObjectPtr.h  PythonQtProperty.h  PythonQtPythonInclude.h  PythonQtQFileImporter.cpp  PythonQtQFileImporter.h  PythonQtSignal.cpp  PythonQtSignalReceiver.cpp  PythonQtSignalReceiver.h  PythonQtSlot.cpp  PythonQtSlot.h  PythonQtStdDecorators.cpp  PythonQtStdDecorators.h  PythonQtStdIn.cpp  PythonQtStdOut.cpp  PythonQtSystem.h  PythonQtThreadSupport.h  PythonQtUtils.h  PythonQtVariants.cpp  PythonQtVariants.h  PythonQtWrapper.cpp  PythonQtWrapper.h  (+2 more)
trunk/tests/: PythonQtTestMain.cpp  PythonQtTests.cpp  PythonQtTests.h
(+3138 files in other folders)
